# codegen

./: CMakeLists.txt  codegen.gyp
codegen/common/: CMakeLists.txt  checked_utf8_string.cpp  cpp_file.cpp  cpp_file.h  logging.cpp
codegen/emoji/: CMakeLists.txt  data.cpp  data.h  data_old.h  data_read.cpp  generator.cpp  generator.h  main.cpp  options.cpp  options.h  replaces.cpp
codegen/lang/: CMakeLists.txt  generator.cpp  generator.h  options.cpp  parsed_file.cpp  parsed_file.h  processor.cpp  subsets.cpp  subsets.h
codegen/numbers/: CMakeLists.txt  generator.cpp  generator.h  main.cpp  options.cpp  options.h  parsed_file.cpp  parsed_file.h  processor.cpp  processor.h
codegen/style/: CMakeLists.txt  generator.cpp  generator.h  main.cpp  module.cpp  module.h  options.cpp  options.h  parsed_file.cpp  parsed_file.h  processor.cpp  processor.h  render_svg.cpp  render_svg.h  structure_types.cpp  structure_types.h
